--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex,nofollow">
-    <title>Ica</title>
+    <title>ICA</title>
     
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
     <link
