--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,26 @@
     <meta name="robots" content="noindex,nofollow">
     <title>ICA</title>
     
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logos/ica_logo_blue_ico.jpg">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png"> -->
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700"
       rel="stylesheet"
     />
+
+    <script type="importmap">
+        {
+          "imports": {
+            "@popperjs/core": "https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/esm/popper.min.js",
+            "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.esm.min.js"
+          }
+        }
+        </script>
+        <script type="module">
+          import * as bootstrap from 'bootstrap'
+    
+          new bootstrap.Popover(document.getElementById('popoverButton'))
+        </script>
 </head>
 
 <body>
