New features added (connection to API, login func)

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
           }
         }
         </script>
-        <script type="module">
+        <!-- <script type="module">
           import * as bootstrap from 'bootstrap'
     
           new bootstrap.Popover(document.getElementById('popoverButton'))
-        </script>
+        </script> -->
 </head>
 
 <body>
